# nataasvpp

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile  Makefile  README.md  library.cmake  run.sh
.github/workflows/: makefile.yml
cmake/: counter.cmake
control-plane/: MANIFEST.in  Makefile  README.md  build-requirements.txt  nataasvpp-schema.json  pyproject.toml  setup.py  validate.py  vppapi.py  vppconf.py
control-plane/tests/: test_caller.py  test_parser.py
control-plane/vppconf/: caller.py  exceptions.py  parser.py  schema.json  validator.py
doc/: NATaaSVPP Outstanding items.md  TODO.md  configuration.json  configuration.yml  index.md
gateway/: CMakeLists.txt  cli.c  format.c  gateway.c  gateway.h  interface.c  service.c  service.h
gateway/geneve_input/: cli.c  node.c
gateway/lookup/: node.c
gateway/tunnel/: node.h
plugins/: CMakeLists.txt  counters.py
plugins/cmake/: counter.cmake
plugins/dummy/: dot1q.c
plugins/gateway/: api.c  cli.c  gateway.api  gateway.c  gateway.h  interface.c  vcdp_dpo.c  vcdp_dpo.h
plugins/gateway/geneve_input/: node.c
plugins/gateway/geneve_output/: node.c
plugins/gateway/tunnel/: node.c  node.h  packets.def  test.c  test_packets.h  test_stubs.c  tunnel.c  tunnel.h
plugins/test/: test.c  test_genpackets.py  test_node_macros.h  test_packets.h  test_stubs.h  test_tcp_state.c
plugins/tunnel/: api.c  cli.c  node.c  node.h  test.c  test_stubs.c  tunnel.api  tunnel.c  tunnel.h
plugins/unittest/: scapy.c  vcdp_unittest.c
plugins/vcdp/: api.c  cli.c  common.h  create.c  export.c  format.c  plugin.c  service.c  service.h  session.c  timer.h  timer_lru.h  vcdp.api  vcdp.c  vcdp.h  vcdp_counter.json  vcdp_funcs.h  vcdp_types.api  vcdp_types_funcs.h
plugins/vcdp/bypass/: node.c
plugins/vcdp/drop/: node.c
plugins/vcdp/icmp/: icmp4.c  node.c
plugins/vcdp/l4-lifecycle/: node.c
plugins/vcdp/lookup/: create.c  icmp_error_node.c  lookup_inlines.h  node.c  session.c  sv_reass_node.c
plugins/vcdp/nat/: fastpath_node.c  slowpath_node.c
plugins/vcdp/punt/: node.c  punt.c  punt.h  punt.md
plugins/vcdp/tcp-check/: api.c  cli.c  node.c  tcp_check.c
plugins/vcdp/timer/: node.c  timer.h
plugins/vcdp_services/l4-lifecycle/: node.c
plugins/vcdp_services/nat/: api.c  cli.c  external_input_node.c  fastpath_node.c  format.c  icmp_error_node.c  nat.api  nat.c  nat.h  nat64_fastpath.c  nat64_icmp_error.c  nat64_slowpath.c  nat_counter.json  nat_inlines.h  rewrite.h  slowpath_node.c  vcdp_nat_dpo.c  vcdp_nat_dpo.h
plugins/vcdp_services/sample/: node.c
plugins/vcdp_services/stats/: api.c  node.c  stats.api  stats.c  test
plugins/vcdp_services/tcp-check/: api.c  cli.c  format.c  node.c  tcp_check.api  tcp_check.c  tcp_check.h
plugins/vcdp_services/tcp-check-lite/: api.c  format.c  node.c  node.h  state.dot  tcp_check_lite.c  tcp_check_lite.h
plugins/vcdp_services/tcp-mss/: api.c  node.c  tcp_mss.api  tcp_mss.c  tcp_mss.h
pytest/native/: vpe.conf
pytest/vxlan/: linux.sh  run.sh
src/: CMakeLists.txt
src/dummy/: dot1q.c
src/gateway/: cli.c  gateway.api  gateway.c  gateway.h
src/gateway/geneve_input/: cli.c  node.c
src/gateway/geneve_output/: node.c
src/vcdp/: api.c  cli.c  format.c  service.h  timer.h  vcdp.api  vcdp.c  vcdp.h  vcdp_funcs.h
src/vcdp/drop/: node.c
src/vcdp/l4-lifecycle/: node.c
src/vcdp/lookup/: node.c
src/vcdp/nat/: api.c  cli.c  external_input_node.c  fastpath_node.c  format.c  nat.api  nat.c  nat.h  slowpath_node.c
src/vcdp/tcp-check/: cli.c  format.c  node.c  tcp_check.h
src/vcdp/timer/: node.c  timer.h
test/: test_nat.py  test_nataas.py  test_nataascpe.py  test_vcdp.py  test_vcdp_multihoming.py  test_vcdp_portforwarding.py  test_vcdp_tcp_session.py
test/native/: run.sh  startup.conf  vpe.conf
test/vxlan/: README.md  startup.conf  vpe.conf
test2/: test.c  test_genpackets.py  test_node_macros.h  test_stubs.h  test_tcp_state.c
tools/: counters.py  setup.py
unittest/: vcdp_unittest.c
vcdp/: api.c  cli.c  common.h  create.c  export.c  format.c  geneve_packet.h  plugin.c  service.h  session.c  session.h  timer_lru.h  vcdp.api  vcdp.c  vcdp.h  vcdp_types.api  vcdp_types_funcs.h
vcdp/icmp/: node.c
vcdp/lookup/: lookup_inlines.h  node.c
vcdp_services/l4-lifecycle/: node.c
vcdp_services/nat/: api.c  cli.c  fastpath_node.c  format.c  icmp_error_node.c  nat.c  nat.h  nat64_fastpath.c  nat64_icmp_error.c  nat64_slowpath.c  nat_counter.json  nat_inlines.h  rewrite.h  slowpath_node.c  vcdp_nat_dpo.c  vcdp_nat_dpo.h
vcdp_services/stats/: node.c  stats.c  stats.h  test.c
vcdp_services/tcp-check/: api.c  tcp_check.api  tcp_check.c
vcdp_services/tcp-check-lite/: node.c  node.h  state.txt  tcp_check_lite.api  tcp_check_lite.c  tcp_check_lite.h
vcdp_services/tcp-mss/: api.c  tcp_mss.api  tcp_mss.h
